<resources>
    <string name="app_name">Notarius</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register_workout">Register a workout</string>
    <string name="older_text">Older</string>
    <string name="today_text">Today</string>
    <string name="see_history">See workout history</string>
    <string name="choose_workout">Choose workout type</string>
    <string name="cycling">Cycling</string>
    <string name="running">Running</string>
    <string name="weights">Weights</string>
    <string name="set_workout">Set workout details</string>
    <string name="duration_text">Duration</string>
    <string name="effort_text">Effort</string>
    <string name="save_history">Save &amp; history</string>
    <string name="save_new">Save &amp; add new </string>
    <string name="save_exit">Save &amp; exit</string>
    <string name="work_out_history">Workout history</string>
    <string name="register">Register workout</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="notification_on_off">Notifications on/off</string>
    <string name="frequency">Frequency</string>

    <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>

    <string-array name="custom_colors">
        <item name="red">#ffe2231a</item>
        <item name="dark_red">#ff510209</item>
        <item name="yellow">#FFFF00</item>
        <item name="pink">#FFC0CB</item>
        <item name="purple">#800080</item>
        <item name="green">#008000</item>
        <item name="blue">#0000FF</item>
        <item name="cyan">#00FFFF</item>
        <item name="gold">#FFD700</item>
        <item name="indigo">#4B0082</item>
        <item name="violet">#EE82EE</item>
        <item name="sky_blue">#87CEEB</item>
        <item name="disabled_gray">#FF999999</item>
        <item name="orange">#FFE46715</item>
        <item name="seekbar_item">#FF9FDC00</item>
        <item name="error_clock">#FFE40000</item>
    </string-array>

</resources>
