<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9FC5F8"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/choose_workout"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Today"
        android:id="@+id/dateTv"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/cyclingBtn"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/cycling"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/runningBtn"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/running"
        android:textAllCaps="false"
        android:textSize="20sp" />


    <Button
        android:id="@+id/weightBtn"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/weights"
        android:textAllCaps="false"
        android:textSize="20sp" />


</LinearLayout>