<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9FC5F8"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="@drawable/black_rectangle"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/register_workout"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/olderBtn"
                android:layout_width="135dp"
                android:layout_height="65dp"
                android:padding="10dp"
                android:text="@string/older_text"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/todayBtn"
                android:layout_width="135dp"
                android:layout_height="65dp"
                android:layout_marginLeft="15dp"
                android:padding="10dp"
                android:text="@string/today_text"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="320dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:id="@+id/workOutHistoryBtn"
        android:background="@drawable/black_rectangle"
        android:text="@string/see_history"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>