<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9FC5F8"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cyclingBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_circle"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cycling"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/runningBtn"
                android:layout_width="82dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_circle"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/running"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weightBtn"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_circle"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/weights"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/white_circle"
                android:gravity="center"
                android:padding="5dp"
                android:text="+"
                android:id="@+id/plusBtn"
                android:textAllCaps="false"
                android:visibility="visible"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_circle"
                android:gravity="center"
                android:padding="10dp"
                android:textAllCaps="false"
                android:visibility="gone"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/white_circle"
                android:gravity="center"
                android:padding="5dp"
                android:visibility="gone"
                android:textAllCaps="false"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_circle"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/weights"
                android:visibility="gone"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/white_circle"
                android:gravity="center"
                android:padding="5dp"
                android:text="+"
                android:visibility="gone"
                android:textAllCaps="false"
                android:textSize="35sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>